src/main/java/com/example/restaurant/error/ReservationStartTimeAfterEndTimeException.java
package com.example.restaurant.error;

public class ReservationStartTimeAfterEndTimeException extends RuntimeException{
}
